# visionSlam

./: README.md
registration/: CMakeCache.txt  CMakeLists.txt  package.xml  parameters.txt
registration/src/: ParameterReader.h  feature_detection.cpp  feature_detection.h  feature_matcher.cpp  feature_matcher.h  parameter_server.cpp  parameters.txt  pcl_utils.cpp  pcl_utils.h  ransac_transformation.cpp  registration_test.cpp
slam/: CMakeLists.txt  package.xml
slam/cmake/Modules/: FindG2O.cmake
slam/feature/: feature_detection.cpp  feature_detection.h  feature_matcher.cpp  feature_matcher.h  planar.cpp  planar.h
slam/registration/: registration.cpp  registration.h
slam/slam/: extractPlane.cpp  main.cpp  planeRegister.cpp  slamEnd.cpp  slamEnd.h
slam/tool/: ParameterReader.cpp  ParameterReader.h  geometry.h  parameters.txt  pcl_extensions.h  pcl_utils.cpp  pcl_utils.h  ransac_transformation.cpp
tools/: CMakeCache.txt  CMakeLists.txt  Makefile  catinWorkshop.cbp  cmake_install.cmake  feature  imgToPointCloud  package.xml
tools/include/utilities/: geometry.h  utilities.h
tools/src/app/: feature.cpp  imgTopointCloud.cpp
tools/src/utilities/: utilities.cpp
